--- a/index.html
+++ b/index.html
@@ -75,35 +75,40 @@
   <!-- Navbar -->
   <header class="header">
     <nav class="navbar navbar-default navbar-static-top">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-          <img src="assets/images/logo.png" alt="Logo" class="logo-img">
-          <span class="company-name">Solution Tech Services</span>
-        </a>
-      </div>
       <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <!-- <div class="navbar-header">
+        <div class="navbar-header">
+          <!-- Logo and Company Name on the left -->
           <a class="navbar-brand" href="#">
             <img src="assets/images/logo.png" alt="Logo" class="logo-img">
             <span class="company-name">Solution Tech Services</span>
           </a>
-        </div> -->
+        </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
+        <!-- Toggle button for mobile view -->
+        <button type="button" class="navbar-toggle navbar-right" data-toggle="collapse" data-target="#navigation-nav">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <!-- Navigation Links -->
         <div class="collapse navbar-collapse" id="navigation-nav">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a class="section-scroll" href="#wrapper">Home</a></li>
+            <li class="active"><a href="#wrapper">Home</a></li>
             <li><a href="#landing-offer">About</a></li>
             <li><a href="#features-section">Services</a></li>
             <li><a href="#team-section">Team</a></li>
             <li><a href="#screenshots-section">Works</a></li>
             <li><a href="#contact-section">Contact</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
+        </div>
+      </div>
     </nav>
   </header>
+
+
+
+
 
 
 
@@ -332,34 +337,15 @@
                       </div>
                     </div>
                   </li>
-                  <!-- Branding -->
+                  <!-- Project -->
                   <li>
                     <div class="left-features-box animated out" data-animation="fadeInLeft" data-delay="0">
                       <span class="iconbox"><i class="icon-strategy"></i></span>
                       <div class="features-box-content">
-                        <h6>Brand Identity</h6>
-                        <p>Building strong brand identities that resonate with audiences and foster brand loyalty.</p>
-                      </div>
-                    </div>
-                  </li>
-                  <!-- Logo Design -->
-                  <li>
-                    <div class="left-features-box animated out" data-animation="fadeInLeft" data-delay="0">
-                      <span class="iconbox"><i class="icon-hotairballoon"></i></span>
-                      <div class="features-box-content">
-                        <h6>Creative Logo Design</h6>
-                        <p>Designing memorable logos that capture the essence of your brand and make a lasting
-                          impression.</p>
-                      </div>
-                    </div>
-                  </li>
-                  <!-- Illustrations -->
-                  <li>
-                    <div class="left-features-box animated out" data-animation="fadeInLeft" data-delay="0">
-                      <span class="iconbox"><i class="icon-lightbulb"></i></span>
-                      <div class="features-box-content">
-                        <h6>Custom Illustrations</h6>
-                        <p>Providing high-quality, custom illustrations that visually communicate your brand’s message.
+                        <h6>Project Management Services</h6>
+                        <p>Project Management involves planning, organizing, and managing activities to complete
+                          projects within predetermined parameters. Solutiontechservices utilizes essential skills,
+                          tools, and best practices to ensure your projects are completed on time and within budget..
                         </p>
                       </div>
                     </div>
@@ -378,7 +364,7 @@
               <div class="right-features-services">
                 <ul class="features-list">
                   <!-- Easy Customization -->
-                  <li>
+                  <!-- <li>
                     <div class="right-features-box animated out" data-animation="fadeInRight" data-delay="0">
                       <span class="iconbox"><i class="icon-tools-2"></i></span>
                       <div class="features-box-content">
@@ -386,19 +372,19 @@
                         <p>Our solutions are easily customizable to meet the specific needs of your business.</p>
                       </div>
                     </div>
-                  </li>
+                  </li> -->
                   <!-- Video -->
-                  <li>
+                  <!-- <li>
                     <div class="right-features-box animated out" data-animation="fadeInRight" data-delay="0">
                       <span class="iconbox"><i class="icon-video"></i></span>
                       <div class="features-box-content">
                         <h6>Engaging Video Content</h6>
                         <p>Creating captivating video content to enhance storytelling and engage your audience.</p>
                       </div>
-                    </div>
+                    </div> -->
                   </li>
                   <!-- Photography -->
-                  <li>
+                  <!-- <li>
                     <div class="right-features-box animated out" data-animation="fadeInRight" data-delay="0">
                       <span class="iconbox"><i class="icon-camera"></i></span>
                       <div class="features-box-content">
@@ -406,14 +392,37 @@
                         <p>Providing professional photography services to showcase your brand's best visual appeal.</p>
                       </div>
                     </div>
-                  </li>
+                  </li> -->
                   <!-- Marketing -->
-                  <li>
+                  <!-- <li>
                     <div class="right-features-box animated out" data-animation="fadeInRight" data-delay="0">
                       <span class="iconbox"><i class="icon-presentation"></i></span>
                       <div class="features-box-content">
                         <h6>Strategic Marketing</h6>
                         <p>Implementing effective marketing strategies to maximize your brand's reach and impact.</p>
+                      </div>
+                    </div>
+                  </li> -->
+                  <li>
+                    <div class="left-features-box animated out" data-animation="fadeInLeft" data-delay="0">
+                      <span class="iconbox"><i class="icon-hotairballoon"></i></span>
+                      <div class="features-box-content">
+                        <h6>Creative Logo Design</h6>
+                        <p>Designing memorable logos that capture the essence of your brand and make a lasting
+                          impression.</p>
+                      </div>
+                    </div>
+                  </li>
+                  <!-- Illustrations -->
+                  <li>
+                    <div class="left-features-box animated out" data-animation="fadeInLeft" data-delay="0">
+                      <span class="iconbox"><i class="icon-lightbulb"></i></span>
+                      <div class="features-box-content">
+                        <h6>Testing Service</h6>
+                        <p>We ensure your software meets high standards. As the world rapidly digitizes, the demand for
+                          quality grows. Today, consumers refuse to compromise, making it essential for businesses to
+                          prioritize quality before releasing products and services to the public.
+                        </p>
                       </div>
                     </div>
                   </li>
@@ -495,7 +504,7 @@
               <!-- Thanu Ganesh NR -->
               <div class="col-sm-4">
                 <div class="member-team">
-                  <img src="assets/images/team/m2.jpg" alt="Thanu Ganesh NR">
+                  <img src="assets/images/team/m1.jpg" alt="Thanu Ganesh NR">
                   <div class="member-details">
                     <h3>Thanu Ganesh NR</h3>
                     <p>Team Lead</p>
@@ -525,10 +534,10 @@
               <!-- Subash Hariharan AR -->
               <div class="col-sm-4">
                 <div class="member-team">
-                  <img src="assets/images/team/m1.jpg" alt="Subash Hariharan AR">
+                  <img src="assets/images/team/m2.jpg" alt="Subash Hariharan AR">
                   <div class="member-details">
-                    <h3>Subash Hariharan AR</h3>
-                    <p>Senior Architect</p>
+                    <h3>hemalivekariya</h3>
+                    <p>Senior Software Developer</p>
                     <ul class="social-icons">
                       <li><a href="#" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
                       <li><a href="#" title="Instagram"><i class="fa fa-instagram"></i></a></li>
@@ -540,7 +549,7 @@
               <!-- Raaghav KR -->
               <div class="col-sm-4">
                 <div class="member-team">
-                  <img src="assets/images/team/m2.jpg" alt="Raaghav KR">
+                  <img src="assets/images/team/m1.jpg" alt="Raaghav KR">
                   <div class="member-details">
                     <h3>Raaghav KR</h3>
                     <p>Senior UI &amp; UX Designer</p>
@@ -599,12 +608,12 @@
                 <div class="p-bar">
                   <!-- meta -->
                   <div class="progress-meta">
-                    <h6 class="progress-title">Flutter</h6>
-                    <h6 class="progress-value">90%</h6>
+                    <h6 class="progress-title">TARGET FIXING</h6>
+                    <h6 class="progress-value">100%</h6>
                   </div>
 
                   <div class="progress">
-                    <div class="progress-bar" aria-valuenow="90" role="progressbar" aria-valuemin="0"
+                    <div class="progress-bar" aria-valuenow="100" role="progressbar" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
 
@@ -613,12 +622,12 @@
                 <div class="p-bar">
                   <!-- meta -->
                   <div class="progress-meta">
-                    <h6 class="progress-title">JavaScript</h6>
-                    <h6 class="progress-value">90%</h6>
+                    <h6 class="progress-title">HARD WORK</h6>
+                    <h6 class="progress-value">100%</h6>
                   </div>
 
                   <div class="progress">
-                    <div class="progress-bar" aria-valuenow="90" role="progressbar" aria-valuemin="0"
+                    <div class="progress-bar" aria-valuenow="100" role="progressbar" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
 
@@ -628,12 +637,12 @@
                 <div class="p-bar">
                   <!-- meta -->
                   <div class="progress-meta">
-                    <h6 class="progress-title">React</h6>
-                    <h6 class="progress-value">85%</h6>
+                    <h6 class="progress-title">SMART WORK</h6>
+                    <h6 class="progress-value">100%</h6>
                   </div>
 
                   <div class="progress">
-                    <div class="progress-bar" aria-valuenow="85" role="progressbar" aria-valuemin="0"
+                    <div class="progress-bar" aria-valuenow="100" role="progressbar" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
 
@@ -643,31 +652,18 @@
                 <div class="p-bar">
                   <!-- meta -->
                   <div class="progress-meta">
-                    <h6 class="progress-title">Node.js</h6>
-                    <h6 class="progress-value">90%</h6>
+                    <h6 class="progress-title">TIME DELIVERY</h6>
+                    <h6 class="progress-value">100%</h6>
                   </div>
 
                   <div class="progress">
-                    <div class="progress-bar" aria-valuenow="80" role="progressbar" aria-valuemin="0"
+                    <div class="progress-bar" aria-valuenow="100" role="progressbar" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
 
                 </div> <!-- end p-bar -->
 
-                <!-- skillbar -->
-                <div class="p-bar">
-                  <!-- meta -->
-                  <div class="progress-meta">
-                    <h6 class="progress-title">Python</h6>
-                    <h6 class="progress-value">75%</h6>
-                  </div>
 
-                  <div class="progress">
-                    <div class="progress-bar" aria-valuenow="75" role="progressbar" aria-valuemin="0"
-                      aria-valuemax="100"></div>
-                  </div>
-
-                </div> <!-- end p-bar -->
 
               </div> <!-- end skills-bars -->
             </div> <!-- end col-md-6 -->
@@ -694,7 +690,7 @@
                   style.
                 </div> <!-- end banner-description -->
                 <div>
-                  <a href="contact.html" class="btn btn-sm btn-clean">Let’s Connect</a>
+                  <a href="#contact-section" class="btn btn-sm btn-clean">Let’s Connect</a>
                 </div>
               </div> <!-- end banner-content -->
             </div> <!-- end col-sm-6 -->
@@ -972,52 +968,34 @@
         <div class="container">
           <div class="row">
 
-            <!-- client -->
+            <!-- Client -->
             <div class="col-xs-4 col-sm-2">
               <div class="client">
                 <a href="#"><img src="assets/images/clients/beliveit-logo.png" alt=""></a>
               </div>
-            </div> <!-- end col-xs-6 -->
+            </div>
 
-            <!-- client -->
+            <!-- Client -->
             <div class="col-xs-4 col-sm-2">
               <div class="client">
                 <a href="#"><img src="assets/images/clients/jd-logo.jpg" alt=""></a>
               </div>
-            </div> <!-- end col-xs-6 -->
+            </div>
 
-            <!-- client -->
+            <!-- Client -->
             <div class="col-xs-4 col-sm-2">
               <div class="client">
                 <a href="#"><img src="assets/images/clients/The pottique.png" alt=""></a>
               </div>
-            </div> <!-- end col-xs-6 -->
-            <!-- client -->
-            <div class="col-xs-4 col-sm-2">
-              <div class="client">
-                <a href="#"><img src="assets/images/clients/beliveit-logo.png" alt=""></a>
-              </div>
-            </div> <!-- end col-xs-6 -->
+            </div>
 
-            <!-- client -->
-            <div class="col-xs-4 col-sm-2">
-              <div class="client">
-                <a href="#"><img src="assets/images/clients/jd-logo.jpg" alt=""></a>
-              </div>
-            </div> <!-- end col-xs-6 -->
-
-            <!-- client -->
-            <div class="col-xs-4 col-sm-2">
-              <div class="client">
-                <a href="#"><img src="assets/images/clients/The pottique.png" alt=""></a>
-              </div>
-            </div> <!-- end col-xs-6 -->
-
-
+            <!-- Repeat for other clients -->
           </div> <!-- End row -->
         </div> <!-- End container -->
       </div>
     </section>
+
+
     <!-- End clients-section -->
 
 
@@ -1121,7 +1099,6 @@
                 <!-- form fields -->
                 <form action="forms/contact.php" method="post" name="contactform" id="contactform" class="animated out"
                   data-animation="fadeInUp" data-delay="0">
-
                   <fieldset>
                     <div class="form-group">
                       <input class="form-control br-b" type="text" name="name" id="name" placeholder="Name">
@@ -1137,18 +1114,16 @@
                     </div>
                   </fieldset>
 
-
                   <div class="form-group">
                     <input type="submit" name="submit" value="Send message" id="submit" class="btn btn-sm btn-dark">
                   </div>
 
                   <div id="alert"></div>
-
                 </form>
-
               </div> <!-- end col-md-8 -->
             </div> <!-- end row -->
-          </div> <!-- end form-wrapper -->
+          </div>
+          <!-- end form-wrapper -->
 
         </div> <!-- end container -->
 
