--- a/index.html
+++ b/index.html
@@ -525,7 +525,8 @@
                     <p>Senior Software Developer</p>
                     <ul class="social-icons">
                       <li><a href="#" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.instagram.com/__ajith_ab_360__/" title="Instagram"><i
+                            class="fa fa-instagram"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -1137,13 +1138,14 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-4">
-              <a href="#"><i class="pe-7s-map-marker"></i>123 Road. New York.</a>
+              <a href="#"><i class="pe-7s-map-marker"></i>Nagercoil</a>
             </div> <!-- End col-sm-4 -->
             <div class="col-sm-4">
-              <a href="tel:+123000456"><i class="pe-7s-phone"></i>+123 000 456</a>
+              <a href="tel:+91 8248989340"><i class="pe-7s-phone"></i>+91 8248989340</a>
             </div>
             <div class="col-sm-4">
-              <a href="mailto:hello@hotmail.com"><i class="pe-7s-mail"></i>hello@hotmail.com</a>
+              <a href="mailto:contact@solutiontechservices.com"><i
+                  class="pe-7s-mail"></i>contact@solutiontechservices.com</a>
             </div>
           </div> <!-- End row -->
         </div> <!-- End container -->
@@ -1158,15 +1160,18 @@
           <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
               <ul class="footer-social-links">
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Dribbble</a></li>
-                <li><a href="#">Behance</a></li>
-                <li><a href="#">Pinterest</a></li>
+                <li><a href="#">LinkedIn</a></li>
+                <li><a
+                    href="https://www.instagram.com/solutiontechservices?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a>
+                </li>
+                <li><a href="https://api.whatsapp.com/send?phone=918248989340">Whatsapp</a>
+                </li>
+
               </ul>
-              <p class="copyright">
-                &copy; 2016 Salient - Created By <a href="http://templatestock.co">Template Stock</a>
+              <p class="copyright"> <a href="http://templatestock.co">© Copyright SolutionTechServices. All Rights
+                  Reserved 2024</a>
               </p>
+
             </div> <!-- End col-sm-8 -->
           </div> <!-- End row -->
         </div> <!-- End container -->
