--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <link rel="stylesheet" href="assets/css/animate.css">
+  <!-- Include jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- Include Bootstrap's JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -82,17 +86,18 @@
             <img src="assets/images/logo.png" alt="Logo" class="logo-img">
             <span class="company-name">Solution Tech Services</span>
           </a>
+
+          <!-- Navbar Toggle Button -->
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#oblique">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
         </div>
 
-        <!-- Toggle button for mobile view -->
-        <button type="button" class="navbar-toggle navbar-right" data-toggle="collapse" data-target="#navigation-nav">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-
         <!-- Navigation Links -->
-        <div class="collapse navbar-collapse" id="navigation-nav">
+        <div class="collapse navbar-collapse" id="oblique">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#wrapper">Home</a></li>
             <li><a href="#landing-offer">About</a></li>
@@ -102,9 +107,12 @@
             <li><a href="#contact-section">Contact</a></li>
           </ul>
         </div>
+
       </div>
     </nav>
   </header>
+
+
 
 
 
@@ -972,7 +980,13 @@
             <!-- Client -->
             <div class="col-xs-4 col-sm-2">
               <div class="client">
-                <a href="#"><img src="assets/images/clients/beliveit-logo.png" alt=""></a>
+                <a href="https://beliveittech.com/"><img src="assets/images/clients/beliveit-logo.png" alt=""></a>
+              </div>
+            </div>
+            <!-- Client -->
+            <div class="col-xs-4 col-sm-2">
+              <div class="client">
+                <a href="https://masterheattechnology.com/"><img src="assets/images/clients/mht.png" alt=""></a>
               </div>
             </div>
 
@@ -986,7 +1000,8 @@
             <!-- Client -->
             <div class="col-xs-4 col-sm-2">
               <div class="client">
-                <a href="#"><img src="assets/images/clients/The pottique.png" alt=""></a>
+                <a href="https://shop.solutiontechservices.com/"><img src="assets/images/clients/The pottique.png"
+                    alt=""></a>
               </div>
             </div>
 
@@ -995,7 +1010,6 @@
         </div> <!-- End container -->
       </div>
     </section>
-
 
     <!-- End clients-section -->
 
@@ -1087,8 +1101,10 @@
               <div class="col-sm-8 col-sm-offset-2">
                 <h2>Get in touch</h2>
                 <hr>
-                <p>Sed ac mattis justo. Vestibulum facilisis at arcu ac porta. Vivamus at ipsum at quam hendrerit
-                  gravida.</p>
+                <p>Whether you’ve just started thinking about how custom software could work for your business or if
+                  you’ve got your plan laid out and you’re ready to execute, we’d love to hear from you. We pride
+                  ourselves on our listening skills, helping clients transform their ideas into reality through a
+                  solution-oriented, transparent development process.</p>
               </div>
             </div> <!-- End row -->
           </div> <!-- end title-section -->
