--- a/index.html
+++ b/index.html
@@ -77,40 +77,89 @@
   </div>
 
   <!-- Navbar -->
-  <header class="header">
-    <nav class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <!-- Logo and Company Name on the left -->
-          <a class="navbar-brand" href="#">
-            <img src="assets/images/logo.png" alt="Logo" class="logo-img">
-            <span class="company-name">Solution Tech Services</span>
-          </a>
+  <header style="background-color: #fff; color: #eea501; padding: 10px 0; position: relative;">
+    <nav style="margin: 0; border: none;">
+      <div style="display: flex; align-items: center; justify-content: space-between; padding: 0 20px;">
 
-          <!-- Navbar Toggle Button -->
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#oblique">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+        <!-- Logo and Company Name on the left -->
+        <a href="#" style="display: flex; align-items: center; text-decoration: none;">
+          <img src="assets/images/logo.png" alt="Logo" style="height: 40px; margin-right: 10px;">
+          <span style="font-size: 20px; font-weight: bold; color: #eea501;">Solution Tech Services</span>
+        </a>
 
-        </div>
+        <!-- Navbar Toggle Button for mobile view, aligned to the right -->
+        <button id="navbarToggle" type="button" onclick="toggleMenu()"
+          style="border: none; background-color: transparent; display: none;">
+          <span style="background-color: #eea501; width: 22px; height: 2px; display: block; margin: 4px 0;"></span>
+          <span style="background-color: #eea501; width: 22px; height: 2px; display: block; margin: 4px 0;"></span>
+          <span style="background-color: #eea501; width: 22px; height: 2px; display: block; margin: 4px 0;"></span>
+        </button>
 
         <!-- Navigation Links -->
-        <div class="collapse navbar-collapse" id="oblique">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#wrapper">Home</a></li>
-            <li><a href="#landing-offer">About</a></li>
-            <li><a href="#features-section">Services</a></li>
-            <li><a href="#team-section">Team</a></li>
-            <li><a href="#screenshots-section">Works</a></li>
-            <li><a href="#contact-section">Contact</a></li>
+        <div id="navbarMenu"
+          style="display: none; position: absolute; top: 60px; right: 20px; background-color: #fff; border: 1px solid #ddd; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); padding: 10px; width: 200px; z-index: 1000;">
+          <ul style="list-style-type: none; padding: 0; margin: 0;">
+            <li style="margin: 5px 0;"><a href="#wrapper"
+                style="color: #eea501; font-size: 16px; text-transform: uppercase; text-decoration: none; display: block;">Home</a>
+            </li>
+            <li style="margin: 5px 0;"><a href="#landing-offer"
+                style="color: #eea501; font-size: 16px; text-transform: uppercase; text-decoration: none; display: block;">About</a>
+            </li>
+            <li style="margin: 5px 0;"><a href="#features-section"
+                style="color: #eea501; font-size: 16px; text-transform: uppercase; text-decoration: none; display: block;">Services</a>
+            </li>
+            <li style="margin: 5px 0;"><a href="#team-section"
+                style="color: #eea501; font-size: 16px; text-transform: uppercase; text-decoration: none; display: block;">Team</a>
+            </li>
+            <li style="margin: 5px 0;"><a href="#screenshots-section"
+                style="color: #eea501; font-size: 16px; text-transform: uppercase; text-decoration: none; display: block;">Works</a>
+            </li>
+            <li style="margin: 5px 0;"><a href="#contact-section"
+                style="color: #eea501; font-size: 16px; text-transform: uppercase; text-decoration: none; display: block;">Contact</a>
+            </li>
           </ul>
         </div>
 
       </div>
     </nav>
   </header>
+
+  <script>
+    function toggleMenu() {
+      const navbarMenu = document.getElementById("navbarMenu");
+
+      if (navbarMenu.style.display === "none" || navbarMenu.style.display === "") {
+        navbarMenu.style.display = "block";
+      } else {
+        navbarMenu.style.display = "none";
+      }
+    }
+
+    // Show or hide the toggle button and reset menu style based on window width
+    function checkScreenWidth() {
+      const navbarToggle = document.getElementById("navbarToggle");
+      const navbarMenu = document.getElementById("navbarMenu");
+
+      if (window.innerWidth < 1200) {
+        navbarToggle.style.display = "inline-block"; // Show toggle button on small screens
+        navbarMenu.style.display = "none"; // Hide the menu initially on mobile
+      } else {
+        navbarToggle.style.display = "none"; // Hide toggle button on large screens
+        navbarMenu.style.display = "block"; // Show menu as horizontal navbar on desktop
+        navbarMenu.style.position = "static"; // Reset positioning for desktop view
+        navbarMenu.style.backgroundColor = "transparent"; // Transparent background on desktop
+        navbarMenu.style.boxShadow = "none"; // No shadow for desktop
+      }
+    }
+
+    // Run on initial load and on window resize
+    window.onload = checkScreenWidth;
+    window.onresize = checkScreenWidth;
+  </script>
+
+
+
+
 
 
 
