--- a/index.html
+++ b/index.html
@@ -1073,41 +1073,75 @@
     <section>
       <div id="clients-section" class="clients-bg" data-stellar-background-ratio="0">
         <div class="container">
-          <div class="row">
+          <div class="clients-scrollable">
 
-            <!-- Client -->
-            <div class="col-xs-4 col-sm-2">
+            <!-- Duplicate the client logos to create a seamless scroll effect -->
+            <div class="clients-list">
+              <!-- Client 1 -->
               <div class="client">
-                <a href="https://beliveittech.com/"><img src="assets/images/clients/beliveit-logo.png" alt=""></a>
+                <a href="https://beliveittech.com/"><img src="assets/images/clients/beliveit-logo.png"
+                    alt="BeliveIT"></a>
               </div>
-            </div>
-            <!-- Client -->
-            <div class="col-xs-4 col-sm-2">
-              <div class="client">
-                <a href="https://masterheattechnology.com/"><img src="assets/images/clients/mht.png" alt=""></a>
-              </div>
-            </div>
 
-            <!-- Client -->
-            <div class="col-xs-4 col-sm-2">
+              <!-- Client 2 -->
               <div class="client">
-                <a href="#"><img src="assets/images/clients/jd-logo.jpg" alt=""></a>
+                <a href="https://masterheattechnology.com/"><img src="assets/images/clients/mht.png" alt="MHT"></a>
               </div>
-            </div>
 
-            <!-- Client -->
-            <div class="col-xs-4 col-sm-2">
+              <!-- Client 3 -->
+              <div class="client">
+                <a href="#"><img src="assets/images/clients/jd-logo.jpg" alt="JD Logo"></a>
+              </div>
+
+              <!-- Client 4 -->
               <div class="client">
                 <a href="https://shop.solutiontechservices.com/"><img src="assets/images/clients/The pottique.png"
-                    alt=""></a>
+                    alt="The Pottique"></a>
+              </div>
+
+              <!-- Repeat client logos for continuous scrolling -->
+              <div class="client">
+                <a href="https://beliveittech.com/"><img src="assets/images/clients/beliveit-logo.png"
+                    alt="BeliveIT"></a>
+              </div>
+              <div class="client">
+                <a href="https://masterheattechnology.com/"><img src="assets/images/clients/mht.png" alt="MHT"></a>
+              </div>
+              <div class="client">
+                <a href="#"><img src="assets/images/clients/jd-logo.jpg" alt="JD Logo"></a>
+              </div>
+              <div class="client">
+                <a href="https://shop.solutiontechservices.com/"><img src="assets/images/clients/The pottique.png"
+                    alt="The Pottique"></a>
+              </div>
+
+              <!-- Client 1 -->
+              <div class="client">
+                <a href="https://beliveittech.com/"><img src="assets/images/clients/beliveit-logo.png"
+                    alt="BeliveIT"></a>
+              </div>
+
+              <!-- Client 2 -->
+              <div class="client">
+                <a href="https://masterheattechnology.com/"><img src="assets/images/clients/mht.png" alt="MHT"></a>
+              </div>
+
+              <!-- Client 3 -->
+              <div class="client">
+                <a href="#"><img src="assets/images/clients/jd-logo.jpg" alt="JD Logo"></a>
+              </div>
+
+              <!-- Client 4 -->
+              <div class="client">
+                <a href="https://shop.solutiontechservices.com/"><img src="assets/images/clients/The pottique.png"
+                    alt="The Pottique"></a>
               </div>
             </div>
-
-            <!-- Repeat for other clients -->
-          </div> <!-- End row -->
+          </div> <!-- End clients-scrollable -->
         </div> <!-- End container -->
       </div>
     </section>
+
 
     <!-- End clients-section -->
 
