--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                           brand’s message.</p>
                       </li>
 
-                      <li class="caption">
+                      <!-- <li class="caption">
                         <h1 class="head-primary">Flexible Customization</h1>
                         <div class="div-line"></div>
                         <p class="hero">Our solutions are easily customizable to meet the specific needs of your
@@ -295,7 +295,7 @@
                         <div class="div-line"></div>
                         <p class="hero">Implementing effective marketing strategies to maximize your brand's reach and
                           impact.</p>
-                      </li>
+                      </li> -->
 
                       <li class="caption">
                         <h1 class="head-primary">Dedicated Support</h1>
@@ -834,6 +834,7 @@
                 real-world IT challenges with precision and expertise. With over two decades of experience, Infotech
                 Maldives
                 has set the standard for excellence in enterprise computing solutions.
+                <br> <br>
               </p>
 
               <p>
@@ -902,9 +903,7 @@
                 we remain
                 at the forefront of technological advancements, offering our clients innovative alternatives and
                 solutions that drive success.
-              </p>
-
-              <p>
+                <br> <br>
                 Experience the difference with STS and Infotech Maldives. Contact us today to discover how we can
                 elevate your
                 enterprise to new heights.
@@ -947,10 +946,6 @@
                 <h2>Infotech Maldives</h2>
               </div> <!-- End section_header -->
 
-              <p>
-                3rd Floor, H. Miyalani, Sosun Magu, Malé, Maldives<br>
-                +960 331 8712
-              </p>
 
               <p>
                 Infotech is an information communications technology company that designs systems and solutions. Since
@@ -958,16 +953,16 @@
                 first few years of its inception, the company focused on software development and providing customized
                 software
                 solutions to private businesses and government institutions in the country.
-              </p>
-
-              <p>
+                <br> <br>
                 We create value for our clients by providing enterprise content management systems, business process
                 automation,
                 workflow, records management, document imaging, and web-based automation software. Our expertise
                 includes
                 Windows OS, LAN & WAN Networks, cabling, and CCTV camera systems and their integration and maintenance
-                within
-                an enterprise.
+                within an enterprise.
+                <br> <br>
+                3rd Floor, H. Miyalani, Sosun Magu, Malé, Maldives<br>
+                +960 331 8712
               </p>
 
               <div class="view-more">
@@ -1308,7 +1303,8 @@
           <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
               <ul class="footer-social-links">
-                <li><a href="#">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/feed/update/urn:li:activity:7197143055521517570/">LinkedIn</a>
+                </li>
                 <li><a
                     href="https://www.instagram.com/solutiontechservices?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a>
                 </li>
